@@ -94,9 +94,13 @@ DEPENDENCIES
 SEE ALSO
     Map::Tube, Map::Tube::GraphViz, Map::Tube::Text::Table.
 
+    Map::Tube::Barcelona, Map::Tube::Berlin, Map::Tube::Bucharest,
+    Map::Tube::Delhi, Map::Tube::Dnipropetrovsk, Map::Tube::Kazan,
     Map::Tube::Kharkiv, Map::Tube::Kiev, Map::Tube::London,
-    Map::Tube::Minsk, Map::Tube::Moscow, Map::Tube::NYC, Map::Tube::Samara,
-    Map::Tube::Sofia, Map::Tube::Tokyo, Map::Tube::Warsaw.
+    Map::Tube::Minsk, Map::Tube::Moscow, Map::Tube::Novosibirsk,
+    Map::Tube::NYC, Map::Tube::SaintPetersburg, Map::Tube::Samara,
+    Map::Tube::Sofia, Map::Tube::Tbilisi, Map::Tube::Tokyo,
+    Map::Tube::Warsaw, Map::Tube::Yekaterinburg.
 
 REPOSITORY
     <https://github.com/tupinek/Map-Tube-Prague>
